Side scrollbars fixed

--- a/src/styles/components/_story.scss
+++ b/src/styles/components/_story.scss
@@ -6,11 +6,19 @@
       opacity: 1;
    }
 
+   @include p-el(after) {
+      @include position(absolute) {
+         inset: 0;
+
+         background-color: hsl(var(--clr-pure-black) / 0.3);
+      }
+   }
+
    @include e(content) {
       position: relative;
       // outline: 1px solid white;z
       pointer-events: none;
-      @include position(absolute, $width: 85%) {
+      @include position(absolute, $width: 85%, $z-index: 3) {
          bottom: 12%;
          left: 50%;
          transform: translateX(-50%);
